fixed chapter last read and bottom spacing

--- a/public/reader/src/css/chapter.css
+++ b/public/reader/src/css/chapter.css
@@ -29,16 +29,17 @@
     color: var(--secondary-foreground)
 }
 
-p {
-    padding-bottom: calc(var(--baseline-v) * 1.5);
+.reader-chapter-content {
+    margin-bottom: calc(var(--baseline-v) * 5);
 }
 
-#fin {
+p {
+    margin-bottom: calc(var(--baseline-v) * 1.5);
+}
+
+#fin-block {
     padding: calc(var(--baseline-v) * 5) 0;
     text-align: center;
-
-    font-family: Times, "Times New Roman", "serif";
-    font-size: calc(var(--baseline-v) * 1.5);
     font-style: italic;
 }
 
